<resources>
    <string name="app_name">XMLComposeMastersWork</string>


    <string name="xml_main_screen_title">Эксперименты на XML</string>
    <string name="xml_list_of_lists_screen_title">Вложенные списки</string>
    <string name="xml_list_different_items_screen_title">Разные списки</string>
    <string name="xml_custom_view_screen_title">Вложенные Custom View</string>
    <string name="xml_with_updates_screen_title">С обновлениями экрана</string>
    <string name="compose_main_screen_title">Эксперименты на Compose</string>

    <string name="partial_order_timer">В этом заказе есть товары, которых нет в наличии. Выберите, пожалуйста, замены.</string>
    <string name="order_you_rating">Ваша оценка</string>
    <string name="specific_order_number">Заказ №</string>
    <string name="specific_order_receiver">Получатель</string>
    <string name="gift_card_sender">Отправитель</string>
    <string name="gift_card_message_text">Текст сообщения</string>
    <string name="method_obtain_header">Способ получения</string>
    <string name="specific_order_date_and_time">Дата и время получения</string>
    <string name="title_order_status">Статус заказа</string>
    <string name="specific_order_payment_type">Способ оплаты</string>
    <string name="specific_order_payment_amount">Всего к оплате</string>
    <string name="specific_order_list">Состав заказа</string>
    <string name="rouble">₽</string>
    <string name="stories">Истории</string>
    <string name="banners">Акции</string>
    <string name="menu">Меню</string>
    <string name="subscriptions">Абонементы и подписки</string>
    <string name="novelties">Новики</string>


</resources>
